# vu_caffe

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-file-demo-py  external_images_guide.json  legacy_git_history.txt  new-plan.md  prompt-all-phase-chanegscode.md  prompt.md  pyproject.toml
backend/: docker-compose.yml  scheduler.py
backend/routers/: api.py
deploy/: Dockerfile  docker-compose.yml
pos/: package-lock.json
pos-backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
pos-backend/src/pos/: crud.py  database.py  main.py  models.py
pos-backend/src/pos/routers/: api.py
pos-frontend/: .dockerignore  Dockerfile  package.json  proxyOptions.js  vite.config.js  vite.config.ts
pos-frontend/src/: i18n.ts
pos-frontend/src/components/: CommentDialog.tsx  OrderStatusSidebar.tsx  OrderTypeSelect.tsx
pos-frontend/src/pages/: Orders.tsx  POS.tsx  Table.tsx
pos-frontend/src/store/: pos-store.ts
pos-frontend/src/stores/: frappeSdk.js
pos/src/: main.tsx
pos/src/components/: Footer.tsx  Header.tsx  (+6 more)
src/pos/: crud.py  database.py  main.py  models.py  scheduler.py
src/templates/: base.html  cart_partial.html  pos.html
ury/: hooks.py
ury/translations/: vi.csv
ury/ury/: noti_telegram.py  scheduler_vu_caffe.py
vu_caffe_custom/: hooks.py
vu_caffe_custom/vu_caffe_custom/: modules.txt  noti_telegram.py  scheduler.py
vu_caffe_pure/: crud.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt  scheduler.py
vu_caffe_pure/templates/: base.html  pos.html
(+15 files in other folders)
