[project]
name = "modern-pos"
version = "0.1.0"
description = "Modern POS Backend using FastAPI and SQLite"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
]

[tool.uv]
package = false
